Adding <div> element to each template - we use the <div> element to create a container for all the page content. This will enable us to center all of this content using CSS later in this chapter

--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
     <title>About - Joe's Pizza Co.</title>
 </head>
 <body>
-    
+    <!-- Page container -->
+    <div id="container">
+        
+    </div>
 </body>
 </html>
