--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Joe's Pizza Co. - New York's Best Pizza</title>
 </head>
 <body>
-    
+    <!-- Page container -->
+    <div id="container">
+        
+    </div>
 </body>
 </html>
