--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <body>
     <!-- Page container -->
     <div id="container">
-        
+        <!-- Header -->
+        <header>
+            
+        </header>
     </div>
 </body>
 </html>
